--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/user-event": "^7.2.1",
         "bootstrap": "^4.5.2",
+        "mutation-observer": "^1.0.3",
         "nanoid": "^3.1.12",
         "react": "^16.13.1",
         "react-bootstrap": "^1.3.0",
